--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,11 @@ jobs:
   deploy:
     name: Release
     runs-on: ubuntu-latest    
+    env:
+      GO111MODULE: on
+      CGO_ENABLED: 0
+      GOOS: linux
+      GOARCH: amd64
     steps:
     - uses: actions/checkout@master
     - uses: actions/setup-go@v3
@@ -11,7 +16,7 @@ jobs:
         go-version: 1.18.x
         cache: true
         cache-dependency-path: go.sum
-    - run: go build -ldflags "-s -w -extldflags '-static'" -o build/fhp ./cmd/action && strip build/fhp
+    - run:  go build -ldflags "-s -w -extldflags '-static'" -o build/fhp ./cmd/action && strip build/fhp
     - name: Run UPX
       uses: crazy-max/ghaction-upx@v2
       with:
