--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,7 @@ outputs:
     value: ${{ steps.fhp.outputs.diff }}
 runs:
   using: 'composite'
+
   steps:
     - uses: actions/setup-go@v3
       with:
@@ -45,9 +46,17 @@ runs:
       run: go mod download
       working-directory: ${{ github.action_path }}
       shell: bash
+    - run:  go build -ldflags "-s -w -extldflags '-static'" -o build/fhp ./cmd/action
+      working-directory: ${{ github.action_path }}
+      shell: bash
+      env:
+        GO111MODULE: on
+        CGO_ENABLED: "0"
+        GOOS: linux
+        GOARCH: amd64
     - name: Flux Helm Preview
       id: fhp
-      run: go run main.go
+      run: ./build/fhp
       working-directory: ${{ github.action_path }}/cmd/action
       shell: bash
       env:
