--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,7 @@ runs:
     - name: Flux Helm Preview
       id: fhp
       run: ./build/fhp
-      working-directory: ${{ github.action_path }}/cmd/action
+      working-directory: ${{ github.action_path }}
       shell: bash
       env:
         INPUT_HELM: ${{ inputs.helm }}
